# exoskeleton

./: .codeassistantignore  .gitignore  .mcp.json.example  AGENTS.md  README.md  SETUP.md  pyproject.toml  setup.sh
.codeassistant/commands/: agenda.md  brief.md  issue.md  my-work.md  remember.md  sync.md  ticket.md  tool-calibrate.md
.codeassistant/rules/: 00-safety.md  10-source-priority.md  20-brain-map.md  30-commands.md
.codeassistant/rules-architect/: 10-plan-before-writing.md
.codeassistant/rules-ask/: 10-read-before-answer.md
brain/control/: constraints.md  quarter.md  role.md  week.md
brain/state/: entity_index.json  quality_report.json  source_state.json
brain/system/: aliases.yaml  identities.yaml  org_structure.md  source-map.yaml
brain/system/query-recipes/: calendar.yaml  deepagent.yaml  intrasearch.yaml  staff.yaml  (+1 more)
brain/views/: active.md  commitments.md  decisions.md  inbox.md  references.md
docs/plans/: 2026-04-02-phase1-skeleton-and-reliability-spine.md
scripts/: bootstrap.py  entity_resolver.py  extract.py  merge_ledger.py  models.py  normalize.py  rebuild_views.py  routing.py  sync_quality.py
scripts/fixtures/: ambiguous_aliases.json  broken_responses.json  calendar_events.json  deepagent_response.json  intrasearch_hits.json  tracker_comments.json  tracker_goals.json  tracker_issues.json  tracker_links.json
tests/: conftest.py  test_entity_resolver.py  test_extract.py  test_full_sync.py  test_integration.py  test_merge_ledger.py  test_models.py  test_normalize.py  test_rebuild_views.py  test_routing.py  test_sync_quality.py
(+10 files in other folders)
